<resources>
    <string name="app_name">SwingStats</string>
    <string name="action_settings">Settings</string>

    <string name="startButton">Start</string>
    <string name="setUpText">Stress Recording.</string>
    <string name="allReadyLinked">Club suggestion or new shot.</string>
    <string name="done">Finish</string>
    <string name="latestShotPage">New</string>

    <string name="intent_key">new intent</string>
    <string name="intent_value">TileEventReceiver</string>
    <string name="title_activity_new_shot">NewShot</string>
    <string name="new_shot_heading">New Shot</string>
    <string name="selectClub">Select Club</string>
    <string name="selectSwing">Select Swing</string>
    <!--intents-->
    <!--Buttons-->
    <string name="accStart">Start Swing</string>
    <string name="accStop">End Swing</string>
    <string name="distStart">Start Distance</string>
    <string name="distEnd">End Distance</string>


    <!--Headings-->
    <string name="maxVelocity">Max Velocity :</string>
    <string name="distanceHeading">Shot Distance :</string>
    <!--messages-->
    <string name="try_to_save">Saving to cloud</string>

    <!--Errors-->
    <string name="couldNotSaveShotData">Error: Unable to save data to cloud</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_auth">Auth</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_shot_results">ShotResults</string>
    <string name="title_activity_shots">Shots</string>
    <string name="title_activity_single_shot_data">Map</string>
    <string name="title_activity_tester">tester</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="shot_stats">Shot Stats</string>
    <string name="shot_avg">Shot Averages</string>
    <string name="club_suggestion">Club Suggestion</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/shot_stats</item>
        <item>@string/shot_avg</item>
        <item>@string/club_suggestion</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shot_averages">ShotAverages</string>
    <string name="title_activity_club_suggestion">ClubSuggestion</string>

    <!--Club suggestion-->
    <string name="suggestion_header">Enter distance in meters</string>
    <string name="title_activity_stress_tips">StressTips</string>

    <!--stress tips-->


    <string name="stress_tips">
    <![CDATA[
       <h2>Stress Tips</h2>
<p>
<ul>
  <li><b>Visualize</b></li>
  <li><b>Pre-shot Routine</b></li>
  <li><b>Deep Breathing</b></li>
</ul>
</p>
    ]]>
</string>


</resources>
